# mcp_wbgapi360

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
examples/: guia_usuario_colab.ipynb  guia_usuario_colab.py
tests/: conftest.py  test_mcp.py
wbgapi360/: __init__.py  api.py  cli.py  config.py
wbgapi360/ai/: agent.py
wbgapi360/core/: auditor.py  client.py  models.py  transformers.py  utils.py
wbgapi360/data/: builder.py
wbgapi360/mcp/: server.py
wbgapi360/metadata/: builder.py  iso_mapping.py  resolver.py
wbgapi360/search/: engine.py
wbgapi360/visual/: __init__.py  charts.py
