[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wbgapi360"
version = "0.2.1"
description = "Enterprise-grade Async Python Client for World Bank Data360 API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Maykol Medrano", email = "mmedrano2@uc.cl"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",   
]
dependencies = [
    "httpx>=0.23.0",
    "pandas>=1.3.0",
    "pydantic>=2.0.0",
    "nest_asyncio>=1.5.0",
    "fastmcp>=0.1.0",
]

[project.scripts]
wbgapi360 = "wbgapi360.cli:main"

[project.optional-dependencies]
visual = ["matplotlib>=3.4.0", "seaborn>=0.11.0"]
map = ["geopandas>=0.9.0", "matplotlib>=3.4.0"]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["."]
include = ["wbgapi360*"]
